--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.mayandro.dexquiz"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 33
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -41,21 +41,59 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.mayandro.dexquiz"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        minSdkVersion 26
+        targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
 
     buildTypes {
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+        debug {
             signingConfig signingConfigs.debug
+        }
+        release {
+            productFlavors.all { flavor ->
+                if (flavor.name == "kanto") {
+                    flavor.signingConfig signingConfigs.kanto
+                } else if (flavor.name == "johto") {
+                    flavor.signingConfig signingConfigs.johto
+                } else {
+                    flavor.signingConfig signingConfigs.kanto
+                }
+            }
+        }
+    }
+
+    signingConfigs {
+        kanto {
+            storeFile file(".signing/kanto.jks")
+            keyAlias System.getenv("SIGNING_KEY_ALIAS")
+            keyPassword System.getenv("SIGNING_KEY_PASSWORD")
+            storePassword System.getenv("SIGNING_STORE_PASSWORD")
+
+            v2SigningEnabled true
+        }
+        johto {
+            storeFile file(".signing/johto.jks")
+            keyAlias System.getenv("SIGNING_KEY_ALIAS")
+            keyPassword System.getenv("SIGNING_KEY_PASSWORD")
+            storePassword System.getenv("SIGNING_STORE_PASSWORD")
+
+            v2SigningEnabled true
+        }
+    }
+
+    flavorDimensions "region"
+
+    productFlavors {
+        kanto {
+            dimension "region"
+            applicationIdSuffix ".kanto"
+        }
+        johto {
+            dimension "region"
+            applicationIdSuffix ".johto"
         }
     }
 }
