android Firebase setup.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cloud_firestore: ^4.9.1
   cupertino_icons: ^1.0.2
+  firebase_analytics: ^10.4.5
+  firebase_core: ^2.15.1
+  firebase_crashlytics: ^3.3.5
+  firebase_remote_config: ^4.2.5
 
 dev_dependencies:
   flutter_test:
