--- a/.github/workflows/build_and_upload_pokedex.yaml
+++ b/.github/workflows/build_and_upload_pokedex.yaml
@@ -3,8 +3,8 @@ name: Build and Upload all Pokedex every night
 on: [push]
 
 jobs:
-  update_kanto_pokedex:
-    uses: ./.github/actions/action_build_pokedex.yaml
+  build_kanto_pokedex:
+    uses: ./.github/workflows/_build_pokedex.yaml
     with:
       flavor: "kanto"
 
