--- a/.github/workflows/_build_pokedex.yaml
+++ b/.github/workflows/_build_pokedex.yaml
@@ -48,4 +48,7 @@ jobs:
         working-directory: ${{ env.PATH_POKEDEX_BUILDER }}
         run: dart bin/pokedex_builder.dart build --flavor ${{ inputs.flavor }} --path temporary.json
 
+      - name: Print the created json file
+        run: cat temporary.json
+
 
