--- a/.github/workflows/_build_pokedex.yaml
+++ b/.github/workflows/_build_pokedex.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Run the code generators
         working-directory: ${{ env.PATH_POKEDEX_BUILDER }}
-        run: flutter pub run build_runner build --delete-conflicting-outputs
+        run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Install dependencies for pokedex_builder
         working-directory: ${{ env.PATH_POKEDEX_BUILDER }}
