--- a/.github/workflows/_build_pokedex.yaml
+++ b/.github/workflows/_build_pokedex.yaml
@@ -11,6 +11,8 @@ env:
   DART_SDK_VERSION: 3.1.2
   PATH_POKEDEX_BUILDER: ./tools/pokedex_builder
 
+permissions:
+  checks: write
 
 jobs:
   build_pokedex:
