--- a/.github/workflows/build_and_upload_pokedex.yaml
+++ b/.github/workflows/build_and_upload_pokedex.yaml
@@ -7,6 +7,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: build pokedex
         uses: ./.github/workflows/_build_pokedex.yaml
         with:
