--- a/.github/workflows/build_and_upload_pokedex.yaml
+++ b/.github/workflows/build_and_upload_pokedex.yaml
@@ -4,20 +4,12 @@ on: [push]
 
 jobs:
   build_kanto_pokedex:
-    runs-on: ubuntu-latest
+    uses: ./.github/workflows/_build_pokedex.yaml
+    with:
+      flavor: 'kanto'
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: build pokedex
-        uses: ./.github/workflows/_build_pokedex.yaml
-        with:
-          flavor: 'kanto'
-
-      - name: upload pokedex
-        uses: ./.github/workflows/_build_pokedex.yaml
-        with:
-          flavor: 'kanto'
-          firestore_credentials: ${{ secrets.KANTO_FIREBASE_CREDENTIALS }}
-
+  upload_kanto_pokedex:
+    uses: ./.github/workflows/_upload_pokedex.yaml
+    with:
+      flavor: 'kanto'
+      firestore_credentials: ${{ secrets.KANTO_FIREBASE_CREDENTIALS }}
