--- a/.github/workflows/_upload_pokedex.yaml
+++ b/.github/workflows/_upload_pokedex.yaml
@@ -6,9 +6,9 @@ on:
       flavor:
         type: string
         required: true
-      firestore_credentials:
-        type: string
-        required: true
+      secrets:
+        FIREBASE_CREDENTIALS:
+          required: true
 
 env:
   DART_SDK_VERSION: 3.1.2
