--- a/.github/workflows/_build_pokedex.yaml
+++ b/.github/workflows/_build_pokedex.yaml
@@ -47,12 +47,12 @@ jobs:
         run: echo '' > ${{ inputs.flavor }}_pokedex_collection.json
 
       - name: Store json file in workspace
-        run: mv ${{ inputs.flavor }}_pokedex_collection.json ${{ runner.workspace }}/pokedex/${{ inputs.flavor }}_pokedex_collection.json
+        run: mv ${{ inputs.flavor }}_pokedex_collection.json ${{ runner.workspace }}/${{ inputs.flavor }}_pokedex_collection.json
 
       - name: Fetch, build and create firestore collection json
-        run: dart bin/pokedex_builder.dart build --flavor ${{ inputs.flavor }} --path ${{ inputs.flavor }}_pokedex_collection.json
+        run: dart bin/pokedex_builder.dart build --flavor ${{ inputs.flavor }} --path ${{ runner.workspace }}/${{ inputs.flavor }}_pokedex_collection.json
 
       - name: Print the created json file
-        run: cat ${{ inputs.flavor }}_pokedex_collection.json
+        run: cat  ${{ runner.workspace }}/${{ inputs.flavor }}_pokedex_collection.json
 
 
