--- a/.github/workflows/_upload_pokedex.yaml
+++ b/.github/workflows/_upload_pokedex.yaml
@@ -47,9 +47,15 @@ jobs:
         run: dart test
 
       - name: Create credentials JSON File
-        run: echo ${{ inputs.firestore_credentials }} > credentials.json
+        run: echo ${{ inputs.firestore_credentials }} > ${{ inputs.flavor }}_credentials.json
+
+      - name: Print the collection json file
+        run: cat ${{ runner.workspace }}/${{ inputs.flavor }}_pokedex_collection.json
+
+      - name: Print the credentials json file
+        run: cat  ${{ inputs.flavor }}_credentials.json
 
       - name: Upload to firestore
-        run: dart bin/firestore_file_uploader.dart upload --flavor ${{ inputs.flavor }} --credentials credentials.json --data ${{ runner.workspace }}/${{ inputs.flavor }}_pokedex_collection.json
+        run: dart bin/firestore_file_uploader.dart upload --flavor ${{ inputs.flavor }} --credentials ${{ inputs.flavor }}_credentials.json --data ${{ runner.workspace }}/${{ inputs.flavor }}_pokedex_collection.json
 
 
