--- a/.github/workflows/_build_pokedex.yaml
+++ b/.github/workflows/_build_pokedex.yaml
@@ -6,6 +6,9 @@ on:
       flavor:
         type: string
         required: true
+      collection_path:
+        type: string
+        required: true
 
 env:
   DART_SDK_VERSION: 3.1.2
@@ -28,31 +31,25 @@ jobs:
         with:
           sdk: ${{ env.DART_SDK_VERSION }}
 
-      - name: Format the Dart code
-        run: dart format . --set-exit-if-changed
+      #- name: Format the Dart code
+      #  run: dart format . --set-exit-if-changed
 
-      - name: Run the code generators
-        run: dart run build_runner build --delete-conflicting-outputs
+      #- name: Run the code generators
+      #  run: dart run build_runner build --delete-conflicting-outputs
 
       - name: Install dependencies for pokedex_builder
         run: dart pub get
 
-      - name: Statically analyze the Dart code
-        run: dart analyze
+      #- name: Statically analyze the Dart code
+      #  run: dart analyze
 
-      - name: Run the unit tests
-        run: dart test --file-reporter "json:test-results.json"
-
-      - name: Create firestore collection json File
-        run: echo '' > ${{ inputs.flavor }}_pokedex_collection.json
-
-      - name: Store json file in workspace
-        run: mv ${{ inputs.flavor }}_pokedex_collection.json ${{ runner.workspace }}/tools/data/${{ inputs.flavor }}_pokedex_collection.json
+      #- name: Run the unit tests
+      #  run: dart test --file-reporter "json:test-results.json"
 
       - name: Fetch, build and create firestore collection json
-        run: dart bin/pokedex_builder.dart build --flavor ${{ inputs.flavor }} --path ${{ runner.workspace }}/tools/data/${{ inputs.flavor }}_pokedex_collection.json
+        run: dart bin/pokedex_builder.dart build --flavor ${{ inputs.flavor }} --path ${{ input.collection_path }}
 
       - name: Print the collection json file
-        run: cat  ${{ runner.workspace }}/tools/data/${{ inputs.flavor }}_pokedex_collection.json
+        run: cat  ${{ input.collection_path }}
 
 
