--- a/.github/workflows/build_and_upload_pokedex.yaml
+++ b/.github/workflows/build_and_upload_pokedex.yaml
@@ -24,11 +24,13 @@ jobs:
     uses: ./.github/workflows/_build_pokedex.yaml
     with:
       flavor: 'kanto'
+      collection_path: ${{ runner.workspace }}/kanto_pokedex_collection.json
 
   upload_kanto_pokedex:
     needs: build_kanto_pokedex
     uses: ./.github/workflows/_upload_pokedex.yaml
     with:
       flavor: 'kanto'
+      collection_path: ${{ runner.workspace }}/kanto_pokedex_collection.json
     secrets:
       FIREBASE_CREDENTIALS: ${{ secrets.KANTO_FIREBASE_CREDENTIALS }}
