--- a/.github/workflows/build_and_upload_pokedex.yaml
+++ b/.github/workflows/build_and_upload_pokedex.yaml
@@ -19,18 +19,22 @@ jobs:
       - name: Print the collection json file
         run: cat  ${{ runner.workspace }}/kanto_pokedex_collection.json
 
+      - name: Set collection path as an output
+        id: set_collection_path
+        run: echo "::set-output name=collection_path::${{ runner.workspace }}/kanto_pokedex_collection.json"
+
   build_kanto_pokedex:
     needs: create_kanto_collection_file
     uses: ./.github/workflows/_build_pokedex.yaml
     with:
       flavor: 'kanto'
-      collection_path: ${{ runner.workspace }}/kanto_pokedex_collection.json
+      collection_path: ${{ needs.create_kanto_collection_file.outputs.collection_path }}
 
   upload_kanto_pokedex:
     needs: build_kanto_pokedex
     uses: ./.github/workflows/_upload_pokedex.yaml
     with:
       flavor: 'kanto'
-      collection_path: ${{ runner.workspace }}/kanto_pokedex_collection.json
+      collection_path: ${{ needs.create_kanto_collection_file.outputs.collection_path }}
     secrets:
       FIREBASE_CREDENTIALS: ${{ secrets.KANTO_FIREBASE_CREDENTIALS }}
