--- a/.github/workflows/_upload_pokedex.yaml
+++ b/.github/workflows/_upload_pokedex.yaml
@@ -56,9 +56,9 @@ jobs:
         run: cat  ${{ inputs.flavor }}_credentials.json
 
       - name: Print the collection json file
-        run: cat ${{ input.collection_path }}
+        run: cat ${{ inputs.collection_path }}
 
       - name: Upload to firestore
-        run: dart bin/firestore_file_uploader.dart upload --flavor ${{ inputs.flavor }} --credentials ${{ inputs.flavor }}_credentials.json --data ${{ input.collection_path }}
+        run: dart bin/firestore_file_uploader.dart upload --flavor ${{ inputs.flavor }} --credentials ${{ inputs.flavor }}_credentials.json --data ${{ inputs.collection_path }}
 
 
