--- a/.github/workflows/_build_pokedex.yaml
+++ b/.github/workflows/_build_pokedex.yaml
@@ -18,24 +18,28 @@ env:
 jobs:
   job1:
     runs-on: ubuntu-latest
-    # Map a step output to a job output
     outputs:
-      output1: ${{ steps.step1.outputs.test }}
-      output2: ${{ steps.step2.outputs.test }}
+      file-artifact: ${{ steps.create-file.outputs.artifact }}
     steps:
-      - id: step1
-        run: echo "test=hello" >> "$GITHUB_OUTPUT"
-      - id: step2
-        run: echo "test=world" >> "$GITHUB_OUTPUT"
+      - name: Create File
+        id: create-file
+        run: |
+          echo "This is some content" > my_file.txt
+          echo "::set-output name=artifact::my_file.txt"
 
   job2:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-      - env:
-          OUTPUT1: ${{needs.job1.outputs.output1}}
-          OUTPUT2: ${{needs.job1.outputs.output2}}
-        run: echo "$OUTPUT1 $OUTPUT2"
+      - name: Download Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: ${{ needs.job1.outputs.file-artifact }}
+          path: my_file
+
+      - name: Read Shared File
+        run: |
+          cat my_file/my_file.txt
 
   build_pokedex:
     runs-on: ubuntu-latest
