--- a/.github/workflows/_build_upload_pokedex_workflow.yaml
+++ b/.github/workflows/_build_upload_pokedex_workflow.yaml
@@ -99,8 +99,25 @@ jobs:
         run: dart bin/pokedex_builder.dart build --flavor ${{ inputs.flavor }} --path ../data/firestore/pokedex.json
         working-directory: ${{ env.PATH_POKEDEX_BUILDER }}
 
+
+      - name: Convert Firebase Credentials
+        run: |
+          # Remove leading/trailing whitespace and newline characters
+          CREDENTIALS_JSON=$(echo "${{ secrets.FIREBASE_CREDENTIALS }}" | tr -d '\r\n' | awk '{$1=$1};1')
+            
+          # Escape double quotes for valid JSON
+          CREDENTIALS_JSON=$(echo "$CREDENTIALS_JSON" | sed 's/"/\\"/g')
+            
+          # Wrap in double quotes and output as valid JSON
+          echo "{\"FIREBASE_CREDENTIALS\": \"$CREDENTIALS_JSON\"}" > converted_credentials.json
+            
+          # Display the converted JSON for verification
+          cat converted_credentials.json
+        shell: bash
+
+
       - name: Create credential json File
-        run: echo ${{ secrets.FIREBASE_CREDENTIALS }} > ../data/firebase/service_account.json
+        run: echo "${{ secrets.FIREBASE_CREDENTIALS }}" > ../data/firebase/service_account.json
         working-directory: ${{ env.PATH_POKEDEX_UPLOADER }}
 
       - name: Install dependencies for pokedex_file_uploader
