--- a/.github/workflows/_build_upload_pokedex_workflow.yaml
+++ b/.github/workflows/_build_upload_pokedex_workflow.yaml
@@ -101,6 +101,7 @@ jobs:
 
 
       - name: Convert Firebase Credentials
+        working-directory: ${{ env.PATH_POKEDEX_UPLOADER }}
         run: |
           # Remove leading/trailing whitespace and newline characters
           CREDENTIALS_JSON=$(echo "${{ secrets.FIREBASE_CREDENTIALS }}" | tr -d '\r\n' | awk '{$1=$1};1')
@@ -109,16 +110,16 @@ jobs:
           CREDENTIALS_JSON=$(echo "$CREDENTIALS_JSON" | sed 's/"/\\"/g')
             
           # Wrap in double quotes and output as valid JSON
-          echo "{\"FIREBASE_CREDENTIALS\": \"$CREDENTIALS_JSON\"}" > converted_credentials.json
+          echo "{\"FIREBASE_CREDENTIALS\": \"$CREDENTIALS_JSON\"}" > ../data/firebase/service_account.json
             
           # Display the converted JSON for verification
-          cat converted_credentials.json
+          cat ../data/firebase/service_account.json
         shell: bash
 
 
-      - name: Create credential json File
-        run: echo "${{ secrets.FIREBASE_CREDENTIALS }}" > ../data/firebase/service_account.json
-        working-directory: ${{ env.PATH_POKEDEX_UPLOADER }}
+      #- name: Create credential json File
+      #  run: echo "${{ secrets.FIREBASE_CREDENTIALS }}" > ../data/firebase/service_account.json
+      #  working-directory: ${{ env.PATH_POKEDEX_UPLOADER }}
 
       - name: Install dependencies for pokedex_file_uploader
         run: dart pub get
